[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://quit.gd" type="Script" id=3]
[ext_resource path="res://TitleScreen/options.png" type="Texture" id=4]
[ext_resource path="res://Interface/back.png" type="Texture" id=5]
[ext_resource path="res://resume.gd" type="Script" id=6]
[ext_resource path="res://Interface/Options.tscn" type="PackedScene" id=7]
[ext_resource path="res://Interface/quit.png" type="Texture" id=8]
[ext_resource path="res://Interface/resume.png" type="Texture" id=9]

[node name="pauseMenu" type="CanvasLayer"]
layer = 2

[node name="PauseMenu" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )

[node name="Buttons" type="VBoxContainer" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 23.0
margin_bottom = 10.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="Button" parent="PauseMenu/Buttons"]
margin_left = 80.0
margin_right = 240.0
margin_bottom = 32.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
enabled_focus_mode = 0
icon = ExtResource( 9 )
flat = true
script = ExtResource( 6 )

[node name="options" type="Button" parent="PauseMenu/Buttons"]
margin_left = 86.0
margin_top = 52.0
margin_right = 234.0
margin_bottom = 78.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true

[node name="quit" type="Button" parent="PauseMenu/Buttons"]
margin_left = 80.0
margin_top = 98.0
margin_right = 240.0
margin_bottom = 130.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
enabled_focus_mode = 0
icon = ExtResource( 8 )
flat = true
script = ExtResource( 3 )

[node name="Options" type="VBoxContainer" parent="PauseMenu" instance=ExtResource( 7 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backButton" type="Button" parent="PauseMenu"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -31.0
margin_right = 112.0
margin_bottom = 1.0
icon = ExtResource( 5 )
flat = true
[connection signal="pressed" from="PauseMenu/Buttons/resume" to="PauseMenu/Buttons/resume" method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/Buttons/options" to="PauseMenu" method="_on_options_pressed"]
[connection signal="pressed" from="PauseMenu/Buttons/quit" to="PauseMenu/Buttons/quit" method="_on_quit_pressed"]
[connection signal="pressed" from="PauseMenu/backButton" to="PauseMenu" method="_on_backButton_pressed"]
